<resources>
    <string name="app_name">M-Guide</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="pref_kind_most_popular">movie/popular?</string>
    <string name="pref_kind_top_rated">movie/top_rated?</string>
    <string name="pref_kind_favorites">favorites</string>
    <string name="pref_kind_label_most_popular">Most Popular</string>
    <string name="pref_kind_label_top_rated">Top Rated</string>
    <string name="pref_kind_label_favorites">Favorites</string>
    <string name="pref_kind_label">Kinds</string>
    <string name="pref_kind_key" translatable="false">kind</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="widget_cd" translatable="false">M-Guide widget</string>
    <string name="widget_label" translatable="false">M-Guide</string>
    <string name="trailers" translatable="false">Trailers: </string>
    <string name="no_movies" translatable="false">There is no Favorite movies</string>
    <string name="no_movies_inter" translatable="false">There is no Internet</string>
    <string name="profile">M-Guide Profile picture</string>
    <string name="favorites">Favorites</string>
    <string name="logout">Log out</string>
    <string name="top">Top Rated</string>
    <string name="most">Most Popular</string>
    <string name="login">Log in</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_add_to_fav">Add to Favorites</string>
    <string name="reviews">Reviews:</string>
    <string name="our_review">Users Review:</string>
    <string name="add_review">Add Review</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="or">OR</string>
    <string name="facebook_app_id">661769914193527</string>
    <string name="fb_login_protocol_scheme">fb661769914193527</string>
    <string name="sign_up">Sign up</string>
    <string name="your_name">your name</string>
    <string name="register">Register</string>
    <string name="read_more"><u>Read more</u></string>
    <string name="submit">Submit</string>
    <string name="ur_review">your review</string>
    <string name="review_add">Review added</string>
    <string name="registering">Registering …</string>
    <string name="signing">Signing in …</string>
    <string name="email_pass_empty">email or password is empty</string>
    <string name="log_failed">The Log is failed</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="retry">RETRY</string>
    <string name="write_email">Write email here</string>
    <string name="email_here">email</string>
    <string name="send">Send</string>
    <string name="send_email">Send Email</string>
    <string name="forgot_password">Forgot password</string>
    <string name="field_empty">Field is empty</string>
    <string name="email_reset">Reset email has been sent successfully \nto: %s</string>
    <string name="error_email_pass_reset">Error sending Reset email \nto this email: %s</string>
    <string name="fb_auth_wrong">Error while logging in with Facebook</string>
    <string name="welcome">Welcome</string>
    <string name="exiting">Exiting</string>
    <string name="are_you_sure">Are you sure to exit?</string>
    <string name="ok">OK</string>
    <string name="cancel">cancel</string>
    <string name="pass">Password</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="empty_pass">Empty password!</string>
    <string name="empty_conf_pass">Empty confirm password</string>
    <string name="conf_pass_mismatch">Password misMatch</string>
    <string name="email_conf">Email sent to confirm successfully</string>
    <string name="email_conf_fail">Email confirmation failed</string>

</resources>
