<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:background="@drawable/material_dark_banner"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical"
    android:gravity="bottom">


<ImageView
    android:layout_width="96dp"
    android:layout_height="96dp"
    android:src="@drawable/ic_launcher"
    android:scaleType="centerCrop"
    android:contentDescription="@string/profile"
    android:id="@+id/imageheader"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="24sp"
            android:id="@+id/uname"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="16sp"
            android:id="@+id/emailtext"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

</LinearLayout>