<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<android.support.v7.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:id="@+id/toolbar"
    android:theme="@style/MyToolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@drawable/rounded"
        android:layout_margin="8dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/write_email"
            android:textSize="18sp"/>
        <EditText
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:padding="10dp"
            android:id="@+id/email"
            android:imeOptions="actionDone"
            android:hint="@string/email_here" />
        <Button
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:text="@string/send_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_button"
            android:textSize="20sp" />
        </LinearLayout>
</LinearLayout>
