<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.magdy.mguide.UI.RegisterActivity"
    android:background="@color/back_grey">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardUseCompatPadding="true"
        android:layout_margin="16dp"
        android:padding="@dimen/activity_horizontal_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <EditText
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:inputType="textPersonName"
            android:layout_margin="@dimen/activity_horizontal_margin"

            android:ems="10"
            android:id="@+id/name"
            android:hint="@string/your_name"
            tools:targetApi="cupcake" />

        <EditText
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:layout_margin="@dimen/activity_horizontal_margin"

            android:id="@+id/email"
            android:hint="@string/email_hint"
            tools:targetApi="cupcake" />

        <EditText
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:id="@+id/pass"
            android:hint="@string/pass_hint" />

        <Button
            android:layout_marginTop="24dp"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="24sp" />
    </LinearLayout>
    </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
